<?xml version="1.0"?>
<package format="2">
  <name>hk_camera</name>
  <version>0.1.0</version>
  <description>Camera SDK abstraction for ROS-independent control</description>

  <maintainer email="your@email.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend></build_depend>
  <exec_depend></exec_depend>

  <export></export>
</package>
