<?xml version="1.0"?>
<package format="2">
  <name>hk_camera</name>
  <version>0.1.0</version>
  <description>Camera SDK abstraction for ROS-independent control</description>

  <maintainer email="your@email.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>pluginlib</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>opencv</depend>
  <depend>dynamic_reconfigure</depend>

  <export></export>
</package>
